# wyldveils-media-editor

./: .gitignore  README.md  ToDo.txt  apply_pcm.py  en_strings.txt  fix_broken_concat.py  i18n_audit_fix.py  main.py  pyproject.toml  translate_missing.py  translate_pcm.py  update_pcm_new_keys.py
core/: __init__.py  deps.py  hardware.py  i18n.py  network.py  queue_manager.py  settings.py  skins.py  state.py
locale/: ar_MSA.json  bn_BD.json  de_DE.json  en_GB.json  en_US.json  es_ES.json  fa_IR.json  fr_FR.json  hi_IN.json  id_ID.json  it_IT.json  ja_JP.json  ko_KR.json  ms_MY.json  nl_NL.json  pcm_NG.json  pl_PL.json  pt_BR.json  ro_RO.json  ru_RU.json  sw_KE.json  th_TH.json  tl_PH.json  tr_TR.json  uk_UA.json  ur_PK.json  vi_VN.json  zh_CN.json
scripts/: apply_pcm.py  fix_broken_concat.py  i18n_audit_fix.py  translate_missing.py  translate_pcm.py  update_pcm_new_keys.py
tabs/: __init__.py  all_in_one.py  base_tab.py  registry.py  tab_advancedsettings.py  tab_allinone.py  tab_animatedzoom.py  tab_audioducker.py  tab_audiodynamics.py  tab_audioextractor.py  tab_audiomixer.py  tab_audioreplacer.py  tab_audiosync.py  tab_autocropper.py  tab_autosubs.py  tab_batch.py  tab_batchjoiner.py  tab_beatsynccutter.py  tab_chaptermarkers.py  tab_cliplooper.py  tab_codeccruncher.py  tab_colorcorrector.py  tab_colormatch.py  tab_crossfader.py  tab_deinterlace.py  tab_denoise.py  tab_deshaker.py  tab_encodequeue.py  tab_formatconverter.py  tab_fpsinterpolator.py  tab_frameextractor.py  tab_freezeframe.py  tab_gifmaker.py  tab_greenkeyer.py  tab_hardsubber.py  tab_imagewatermark.py  (+43 more)
(+86 files in other folders)
