[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "quintessential-video-editor"
version = "1.14.0"
description = "Quintessential Video Editor: professional video production toolkit"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
]

[project.scripts]
qve = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "tabs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
